Pagina de inicio en sitio publico

--- a/Clientes/Web/publico/vistas/vistaInicio.html
+++ b/Clientes/Web/publico/vistas/vistaInicio.html
@@ -1,24 +1,63 @@
+<br>
 <div class="row">
-    <img class="img-responsive col-xs-12"  src="http://placehold.it/1024x300/83B1DA/fff" alt="" />
+    <div class="col-sm-4 centrado">
+        <div class="col-sm-12">
+            <img src="http://placehold.it/400x300/83B1DA/fff" class="fotoMaxWidth"/>
+        </div>
+        <div class="col-sm-12">
+            <img src="/img/appStore.png" class="fotoMaxWidth">
+            <img src="/img/googlePlay.png" class="fotoMaxWidth">
+        </div>
+    </div>
+    <div class="col-sm-8">
+        <div class="panel panel-success">
+            <div class="panel-heading">WATCH <sub>MX</sub></div>
+            <div class="panel-body">
+                <p>WATCH<sub>MX</sub> es una herramienta para el monitoreo de la fauna que cruza las carreteras en México y que puede representar un peligro para la seguridad de los usuarios de la red de carreteras en el país y la posible pérdida de la especie por el atropellamiento.</p>
+                <p>WATCH<sub>MX</sub> es el acrónimo de <q>Wild Animals in Transport Corridors and Highways</q>, que en español significa <q>Animales Silvestres en Corredores de Transporte y Carreteras</q>. Si deseas conocer más o tienes dudas envíanos un correo a watch@imt.mx</p>
+            </div>
+        </div>
+    </div>    
 </div>
 <hr />
-
 <div class="row">
-    <div class="col-sm-6">
-        <div class="panel panel-primary ">
-        <div class="panel-heading">Panel heading without title</div>
+    <div class="col-sm-4">
+        <div class="panel panel-success">
+            <div class="panel-heading">¿Cómo funciona?</div>
             <div class="panel-body">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum condimentum iaculis turpis vitae sodales. Vestibulum sed sem placerat, rhoncus risus sit amet, ultricies felis. Proin luctus dignissim ipsum ac rhoncus. Duis tellus diam, eleifend lobortis purus vitae, rhoncus tempus neque. Aliquam erat volutpat. Quisque convallis massa nibh. Praesent sodales augue quis leo sodales, eget tincidunt eros tempus. In vel scelerisque eros. Fusce nec urna sapien. Vestibulum vulputate vitae nisi vel vestibulum. Aliquam dignissim facilisis pharetra. Donec dignissim erat leo, at ultricies nunc iaculis dignissim. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Cras et dolor.
+                <p>El seguimiento se da a través de fotografías tomadas por los usuarios de la red de carreteras y enviadas al Observatorio de Movilidad y Mortalidad de Fauna del Instituto Mexicano de transporte, mediante la cuales se integrará un sistema para:</p>
+                <ul>
+                    <li>Monitorear las especies que cruzan o que son atropelladas en las carreteras</li>
+                    <li>Identificar los puntos críticos de la red que ponen en peligro a los usuarios de la red y a las especies</li>
+                    <li>Generar reportes para auxiliar en la toma de decisiones en la búsqueda de implementar medidas de mitigación</li>
+                    <li>Reducir la mortalidad de especies de fauna en las carreteras y preservarlas para el futuro</li>
+                    <li>Aumentar la seguridad de las carreteras</li>
+                </ul>
             </div>
         </div>
     </div>
-    <div class="col-sm-6">
-        <div class="panel panel-primary ">
-        <div class="panel-heading">Panel heading without title</div>
+    <div class="col-sm-4">
+        <div class="panel panel-success">
+            <div class="panel-heading">Reglas de Seguridad</div>
             <div class="panel-body">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam euismod interdum turpis quis pulvinar. Donec facilisis lacus ex, eget ullamcorper libero bibendum non. Vivamus finibus diam in posuere bibendum. Cras tellus eros, fermentum vitae lectus quis, placerat elementum ante. Praesent vehicula feugiat iaculis. Morbi sed nibh et neque tempor sodales.
+                <p>Antes de tomar la fotografía debes tener especial precaución de:</p>
+                <ul>
+                    <li>Disminuye la velocidad y recuerda encender las luces preventivas del vehículo antes de detenerlo</li>
+                    <li>Detener el vehículo fuera de la calzada</li>
+                    <li>Poner especial atención a la circulación de vehículos para que no comprometas tu seguridad al tomar la fotografía</li>
+                    <li>Evitar remover la especie de fauna de la calzada</li>
+                    <li>En caso de contar con copiloto, es preferible que éste realice la toma de la fotografía</li>
+                    <li>En ningún caso, como conductor, utilices tu teléfono o equipo fotográfico para tomar la imagen sin detener completamente el vehículo en un lugar seguro</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-4">
+        <div class="panel panel-success">
+            <div class="panel-heading">¿Cómo participar?</div>
+            <div class="panel-body">
+                <p>Si al transitar por una carretera mexicana, te percatas de una especie de fauna (venados, reptiles, tortugas, jaguares, etc.) cruzando la carretera o que ha sido atropellada, y sin que comprometas tu seguridad vial puedes tomar una fotografía, posteriormente envíala a través de la aplicación para dispositivos móviles o <a href="#/reportar">Reporta aquí</a>, ésta sería tu colaboración, que nos será de mucha ayuda.</p>
             </div>
         </div>
     </div>
 </div>
-
