Politicas de privacidad

--- a/Clientes/Web/publico/index.html
+++ b/Clientes/Web/publico/index.html
@@ -17,7 +17,7 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#/inicio">
-                    <img alt="Brand" src="//placehold.it/100x20">
+                    <img alt="WATCH" src="//placehold.it/100x20">
                 </a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
@@ -30,6 +30,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="#/reportar">Reportar</a></li>
+                    <li><a href="#/politicas">Políticas de Privacidad</a></li>
                 </ul>
             </div>
         </div>
@@ -65,7 +66,6 @@
 
     <!-- Load controllers -->
     <script src="controladores/controladorReportar.js"></script>
-    <script src="controladores/controladorInicio.js"></script>
 
 </body>
 </html>
