--- a/Clientes/Web/privado/vistas/vistaIncidentes.html
+++ b/Clientes/Web/privado/vistas/vistaIncidentes.html
@@ -13,6 +13,7 @@
             </select>
             &nbsp incidentes
             <button class="btn btn-link" data-toggle="modal" data-target="#agregarEspecie" ng-click="obtenerEstadosEspecies()" ng-class="{ disabled: editandoIn }"><i class="fa fa-plus"></i> Agregar nueva especie</button>
+            <button class="btn btn-link" ng-click="obtenerExcel()"><i class="fa fa-file-excel-o"></i> Descargar incidentes a Excel</button>
         </div>
         <div class="pull-right">
             Filtrar por especie:
