logo, cambios para servidor y servicio como constante

--- a/Clientes/Web/publico/vistas/vistaInicio.html
+++ b/Clientes/Web/publico/vistas/vistaInicio.html
@@ -2,11 +2,11 @@
 <div class="row">
     <div class="col-sm-4 centrado">
         <div class="col-sm-12">
-            <img src="http://placehold.it/400x300/83B1DA/fff" class="fotoMaxWidth"/>
+            <img src="img/logo_watch.png" class="fotoMaxWidth"/>
         </div>
         <div class="col-sm-12">
-            <img src="/img/appStore.png" class="fotoMaxWidth">
-            <img src="/img/googlePlay.png" class="fotoMaxWidth">
+            <img src="img/appStore.png" class="fotoMaxWidth">
+            <img src="img/googlePlay.png" class="fotoMaxWidth">
         </div>
     </div>
     <div class="col-sm-8">
