--- a/Clientes/Web/publico/vistas/vistaReportar.html
+++ b/Clientes/Web/publico/vistas/vistaReportar.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="col-sm-3 col-sm-offset-1" id="vistaPrevia">
-            <img src="/img/vistaPrevia.png" width="100%" title="Vista Previa">
+            <img src="img/vistaPrevia.png" width="100%" title="Vista Previa">
         </div>
     </div>
     <hr/>
