--- a/Clientes/Web/publico/index.html
+++ b/Clientes/Web/publico/index.html
@@ -2,8 +2,8 @@
 <html lang="en" data-ng-app="appPublica">
 <head>
     <meta charset="utf-8" />
-    <title>OMMFCM</title>
-    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <title>WATCH</title>
+    <link rel="shortcut icon" href="img/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet" />
@@ -17,7 +17,7 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#/inicio">
-                    <img alt="WATCH" src="//placehold.it/100x20">
+                    <img alt="WATCH" src="img/watch_icon.png">
                 </a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
