arreglos en sitio privado

--- a/Clientes/Web/privado/index.html
+++ b/Clientes/Web/privado/index.html
@@ -2,13 +2,12 @@
 <html lang="en" data-ng-app="appPrivada">
 <head>
     <meta charset="utf-8" />
-    <title>OMMFCM</title>
-    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <title>WATCH</title>
+    <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://netdna.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/sitio.css" rel="stylesheet" />
-​    <link href="css/bootstrap-select.css" rel="stylesheet" />
     <link href="css/loading-bar.css" rel="stylesheet" />
 </head>
 <body>
@@ -17,8 +16,8 @@
     <nav class="navbar navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#/resumen">
-                    <img alt="Brand" src="//placehold.it/100x20">
+                <a class="navbar-brand" href="#/incidentes">
+                    <img alt="Brand" src="img/watch_icon.png">
                 </a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
@@ -59,7 +58,6 @@
     <script src="scripts/angular-route.min.js"></script>
     <script src="scripts/loading-bar.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
-    <script src="scripts/bs-select/bootstrap-select.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.min.js"></script>
 ​
     <!-- Load app main script -->
