--- a/Clientes/Web/privado/index.html
+++ b/Clientes/Web/privado/index.html
@@ -62,10 +62,12 @@
 ​
     <!-- Load app main script -->
     <script src="app.js"></script>
+    <script src="config.js"></script>
 ​
     <!-- Load services -->
     <script src="servicios/servicioIncidentes.js"></script>
     <script src="servicios/servicioEspecies.js"></script>
+    <script src="servicios/servicioAutenticacion.js"></script>
 ​
     <!-- Load controllers -->
     <script src="controladores/controladorIncidentes.js"></script>
