cambios solicitados por cliente

--- a/Clientes/Web/publico/vistas/vistaInicio.html
+++ b/Clientes/Web/publico/vistas/vistaInicio.html
@@ -25,7 +25,7 @@
         <div class="panel panel-success">
             <div class="panel-heading">¿Cómo funciona?</div>
             <div class="panel-body">
-                <p>El seguimiento se da a través de fotografías tomadas por los usuarios de la red de carreteras y enviadas al Observatorio de Movilidad y Mortalidad de Fauna del Instituto Mexicano de transporte, mediante la cuales se integrará un sistema para:</p>
+                <p>El monitoreo de la fauna, se realiza mediante el seguimiento a través de fotografías tomadas por los usuarios de la red de carreteras y enviadas al Observatorio de Movilidad y Mortalidad de Fauna del Instituto Mexicano de transporte, mediante la cuales se integrará un sistema para:</p>
                 <ul>
                     <li>Monitorear las especies que cruzan o que son atropelladas en las carreteras</li>
                     <li>Identificar los puntos críticos de la red que ponen en peligro a los usuarios de la red y a las especies</li>
