--- a/Clientes/Web/publico/index.html
+++ b/Clientes/Web/publico/index.html
@@ -47,7 +47,9 @@
         <div id="push"></div>
     </div>
 
-    <footer class="background-midnight-blue color-white">
+    <footer class="col-sm-10 col-sm-offset-1">
+        <img src="img/IMT.png">
+        <img src="img/SCT.png">
     </footer>
 
     <!-- 3rd party libraries -->
