--- a/Clientes/Web/publico/vistas/vistaPoliticas.html
+++ b/Clientes/Web/publico/vistas/vistaPoliticas.html
@@ -6,7 +6,7 @@
             <div class="panel-body">
                 <ul>
                 	<li>Los datos recogidos por el proveedor de la aplicación o del gadget estarán sujetos a las políticas de privacidad de dicho proveedor.</li>
-                	<li>Los datos recogidos por el proveedor de la aplicación o del gadget estarán sujetos a las políticas de privacidad de dicho proveedor.</li>
+                	<li>El uso de cookies y su dirección IP, tomados por este sitio, se realiza solo con la finalidad de mantener un sitio de acuerdo a sus preferencias locales (tales como navegador web usado, sistema operativo, ISP, etc.). El IP solo se almacena con fines estadísticos, siendo omitidos todos los datos del tipo personal, tales como el nombre del usuario.</li>
                 	<li>Cuando el usuario envía la fotografía, cede automáticamente los derechos al Instituto Mexicano del Transporte para su explotación, el cual podrá conservarlas para utilizarla con fines de investigación, generación de reportes, monitoreo y actividades relacionadas con la actividad que realiza este centro de investigación.</li>
                 	<li>Cuando el usuario  envía fotos el Host puede recibir información adicional (o metadatos) como la hora, la fecha y el lugar en el que tomó la foto. Esto puede ayudar a la aplicación para la gestión de la información.</li>
                 	<li>Cuando envía mensajes de correo electrónico u otras comunicaciones, podríamos conservarlas a fin de procesar sus consultas, responder a sus peticiones y mejorar nuestra aplicación.</li>
