agregando el mapa desde index, para evitar errores

--- a/Clientes/Web/publico/vistas/vistaReportar.html
+++ b/Clientes/Web/publico/vistas/vistaReportar.html
@@ -1,4 +1,4 @@
-<div ng-init="obtenerEstados(); obtenerMunicipiosOrigen(1); obtenerMunicipiosDestino(1);">
+<div ng-init="obtenerEstados(); obtenerMunicipiosOrigen(1); obtenerMunicipiosDestino(1); initMap();">
     <h2>Reportar Animal en Carretera</h2>
     <hr />
     <div class="row">
@@ -74,5 +74,3 @@
     </div>
 <br>
 </div>
-<script async defer src="https://maps.googleapis.com/maps/api/js?v=3.exp&callback=initMap">
-</script>
