--- a/Clientes/Web/publico/index.html
+++ b/Clientes/Web/publico/index.html
@@ -58,6 +58,7 @@
     <script src="scripts/bootstrap.min.js"></script>
     <script src="scripts/loading-bar.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
 
 
     <!-- load app main script -->
@@ -68,7 +69,6 @@
 
     <!-- Load controllers -->
     <script src="controladores/controladorReportar.js"></script>
-
 </body>
 </html>
 
