agregando mapa en index

--- a/Clientes/Web/privado/vistas/modalMapa.html
+++ b/Clientes/Web/privado/vistas/modalMapa.html
@@ -1,5 +1,5 @@
 <!-- Modal para ver la ubicación de un incidente -->
-<div class="modal fade" id="mapa">
+<div class="modal fade" id="mapa" ng-init="initMap()">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
