--- a/Clientes/Web/privado/index.html
+++ b/Clientes/Web/privado/index.html
@@ -59,6 +59,7 @@
     <script src="scripts/loading-bar.js"></script>
     <script src="scripts/bootstrap.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-route.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js"></script>
 ​
     <!-- Load app main script -->
     <script src="app.js"></script>
