--- a/Clientes/Web/privado/vistas/vistaIncidentes.html
+++ b/Clientes/Web/privado/vistas/vistaIncidentes.html
@@ -1,7 +1,7 @@
 <div ng-include="'vistas/modalAgregarEspecie.html'"></div>
 <div ng-include="'vistas/modalVerFoto.html'"></div>
 <div ng-include="'vistas/modalMapa.html'"></div>
-<div ng-init="obtenerEspecies(1)">
+<div ng-init="obtenerEspecies(1);">
     <div class="row">
         <div class="alert alert-danger fade in retro" ng-show="errores">{{mensaje}}</div>
         <div class="alert alert-success fade in retro" ng-show="exito">{{mensaje}}</div>
@@ -17,7 +17,7 @@
         </div>
         <div class="pull-right">
             Filtrar por especie:
-            <select ng-model="especieSeleccionada" ng-change="actualizarPagina(paginaActual)" ng-options='especie.idEspecie as (especie.nombreComun + " - " + especie.nombreCientifico) for especie in especiesFiltro' class="form-control"></select>
+            <select ng-model="especieSeleccionada" ng-change="actualizarPagina(1)" ng-options='especie.idEspecie as (especie.nombreComun + " - " + especie.nombreCientifico) for especie in especiesFiltro' class="form-control"></select>
         </div>
     </div>
     <hr/>
@@ -84,5 +84,3 @@
         </div>
     </div>
 </div>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXzFKyBxdPSXHWvVMNzXhEYHUW3FEnjeg&callback=initMap">
-</script>
