--- a/Clientes/Web/publico/index.html
+++ b/Clientes/Web/publico/index.html
@@ -48,8 +48,14 @@
     </div>
 
     <footer class="col-sm-10 col-sm-offset-1">
-        <img src="img/IMT.png">
-        <img src="img/SCT.png">
+        <div class="row">
+            <img src="img/IMT.png">
+            <img src="img/SCT.png">
+        </div>
+        <br>
+        <div class="row">
+            INSTITUTO MEXICANO DEL TRANSPORTE - DERECHOS RESERVADOS &copy 2015 - <script type="text/javascript">document.write(new Date().getFullYear())</script>
+        </div>
     </footer>
 
     <!-- 3rd party libraries -->
