--- a/Clientes/Web/privado/vistas/modalMapa.html
+++ b/Clientes/Web/privado/vistas/modalMapa.html
@@ -6,8 +6,11 @@
                 <button class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <h3 class="modal-title">Ubicación</h3>
             </div>
-            <div class="modal-body">
-                <div style="display:block; height:600px; width:100%;" id="map-canvas"></div>
+            <div class="modal-body" style="width: 600px; height:500px;">
+                <ui-gmap-google-map style="display:block; width: 100%; height:100%; " center='map.center'  zoom='map.zoom' control="map.control" events="map.events">
+                    <ui-gmap-marker coords="marker.coords" idkey="marker.id">
+                    </ui-gmap-marker>
+                </ui-gmap-google-map>
             </div>
         </div>
     </div>
