ancho de inputs

--- a/Clientes/Web/privado/vistas/vistaIncidentes.html
+++ b/Clientes/Web/privado/vistas/vistaIncidentes.html
@@ -51,13 +51,13 @@
                         {{incidente.ruta}}
                     </td>
                     <td ng-show="editando[$index]">
-                        <input type="text" ng-model="incidente.ruta" class="form-control">
+                        <input type="text" ng-model="incidente.ruta" class="form-control peque">
                     </td>
                     <td ng-hide="editando[$index]">
                         {{incidente.km}}
                     </td>
                     <td ng-show="editando[$index]">
-                        <input type="text" ng-model="incidente.km" class="form-control">
+                        <input type="text" ng-model="incidente.km" class="form-control peque">
                     </td>
                     <td>
                         {{incidente.fecha}}
