cambios solicitados a pull request corregidos

--- a/Clientes/Web/publico/index.html
+++ b/Clientes/Web/publico/index.html
@@ -76,8 +76,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12">
-                         <div class="col-sm-6"><span> Instituto Mexicano del Transporte - Derechos Reservados © 2015 - 2015</span></div>
-                         <div class="col-sm-6"><address><span class="ic-fo icon-envelope"></span><a href="mailto:watch@imt.mx">watch@imt.mx</a></address></div>
+                         <div class="col-sm-6"><span> Instituto Mexicano del Transporte - Derechos Reservados &copy 2015 - <script type="text/javascript">document.write(new Date().getFullYear())</script></span></div>
+                         <div class="col-sm-6"><address><span class="ic-fo icon-envelope"></span>watch@imt.mx</address></div>
                     </div>
                 </div>
             </div>
