--- a/Clientes/Web/publico/vistas/vistaPoliticas.html
+++ b/Clientes/Web/publico/vistas/vistaPoliticas.html
@@ -1,7 +1,7 @@
 <div class="container about-pg-2">
     <div class="row">
         <div class="col-sm-12">
-            <h2 class="page-header">Politicas de privacidad</h2>
+            <h2 class="page-header">Políticas de privacidad</h2>
             <p>
                 <ul>
                     <li>Los datos recogidos por el proveedor de la aplicación o del gadget estarán sujetos a las políticas de privacidad de dicho proveedor.</li>
