--- a/Clientes/Web/publico/vistas/vistaInicio.html
+++ b/Clientes/Web/publico/vistas/vistaInicio.html
@@ -5,10 +5,10 @@
     </div>-->
 
     <div class="boxgallery">
-        <uib-carousel interval="myInterval" no-wrap="noWrapSlides">
+        <uib-carousel interval="intervalo" no-wrap="agruparSlides">
             <uib-slide ng-repeat="slide in slides" active="slide.active">
                 <div class="panel">
-                    <img ng-src="{{slide.image}}" style="margin:auto;">
+                    <img ng-src="{{slide.imagen}}" style="margin:auto;">
                 </div>
             </uib-slide>
         </uib-carousel>
@@ -34,9 +34,9 @@
                 <img src="images/logo_imt.png" alt="" />
             </div>
             <div class="col-lg-6 col-md-6">
-                <h1 class="section-title"><span>¿Que es WATCH<sub>MX</sub>?</span></h1>
+                <h1 class="section-title"><span>¿Qué es WATCH<sub>MX</sub>?</span></h1>
                 <p>
-                    <strong>WATCH<sub>MX</sub></strong> es una plataforma creada para monitorear la fauna que cruza las carreteras en México con el fin de desarrollar planes de mitigación que puedan ayudar a evitar accidentes de los usuarios que utilicen la red de carreteras del país, así como la perdida de especies por atropellamiento.
+                    <strong>WATCH<sub>MX</sub></strong> es una plataforma creada para monitorear la fauna que cruza las carreteras en México con el fin de desarrollar planes de mitigación que puedan ayudar a evitar accidentes de los usuarios que utilicen la red de carreteras del país, así como la pérdida de especies por atropellamiento.
                 </p>
                 <p>
                     <strong>WATCH<sub>MX</sub></strong> es el acrónimo de <q>Wild Animals in Transport Corridors and Highways</q>, que en español significa <q>Animales Silvestres en Corredores de Transporte y Carreteras</q>. Si deseas conocer más o tienes dudas envíanos un correo a watch@imt.mx
@@ -57,7 +57,7 @@
                     <div class="txt-circle-content first-ic">
                         <div class="fact-icon"><span class="icon-camera"></span></div>
                         <div class="txt-circle">
-                            <h3>Fotografias de incidentes de los usuarios</h3>
+                            <h3>Fotografías de incidentes de los usuarios</h3>
                             <p>Todo comienza gracias a la ayuda de los usuarios, los cuales proporcionan fotografias de los incidentes para su posterior análisis</p>
                         </div>
                     </div>
@@ -65,7 +65,7 @@
                         <div class="fact-icon"><span class="icon-search"></span></div>
                         <div class="txt-circle">
                             <h3>Identificación de especies</h3>
-                            <p>Las fotografias de los usuarios son analizadas para determinar la(s) especie(s) asociada(s) a la foto y poder hacer una mejor clasificación de la información.</p>
+                            <p>Las fotografías de los usuarios son analizadas para determinar la(s) especie(s) asociada(s) a la foto y poder hacer una mejor clasificación de la información.</p>
                         </div>
                     </div>
                     <div class="txt-circle-content">
@@ -87,7 +87,7 @@
         <div class="row">
              <div class="col-lg-12">
                 <div class="col-lg-6">
-                    <h1 class="section-title"><span>¿Como puedo participar?</span></h1>
+                    <h1 class="section-title"><span>¿Cómo puedo participar?</span></h1>
                     <p>Si al transitar por una carretera mexicana, te percatas de una especie de fauna (venados, reptiles, tortugas, jaguares, etc.) cruzando la carretera o que ha sido atropellada y sin que comprometas tu seguridad vial toma una fotografía y súbela a través de nuestra página web o por medio de las aplicaciones para dispositivos móviles oficiales.</p>
                     <p>
                         <a class="btn btn-lg btn-primary" href="#/reportar">Reportar incidente</a>
@@ -96,11 +96,11 @@
                 <div class="col-lg-6">
                     <h1 class="section-title">Medidas de seguridad</h1>
                     <ul>
-                      <li><i class="fa fa-angle-right"></i>Disminuye la velocidad y recuerda encender las luces preventivas del vehículo antes de detenerlo.</li>
+                      <li><i class="fa fa-angle-right"></i>Disminuir la velocidad y recuerda encender las luces preventivas del vehículo antes de detenerlo.</li>
                       <li><i class="fa fa-angle-right"></i>Detener el vehículo fuera de la carretera.</li>
-                      <li><i class="fa fa-angle-right"></i>Poner especial atención a la circulación de vehículos para que no comprometas tu seguridad al tomar la fotografia</li>
-                      <li><i class="fa fa-angle-right"></i>En caso de contar con copiloto, es preferible que éste realice la toma de la fotografía</li>
-                      <li><i class="fa fa-angle-right"></i>En ningún caso, como conductor, utilices tu teléfono o equipo fotográfico para tomar la imagen sin detener completamente el vehículo en un lugar seguro</li>
+                      <li><i class="fa fa-angle-right"></i>Poner especial atención a la circulación de vehículos para que no comprometas tu seguridad al tomar la fotografía.</li>
+                      <li><i class="fa fa-angle-right"></i>En caso de contar con copiloto, es preferible que éste realice la toma de la fotografía.</li>
+                      <li><i class="fa fa-angle-right"></i>En ningún caso, como conductor, utilices tu teléfono o equipo fotográfico para tomar la imagen sin detener completamente el vehículo en un lugar seguro.</li>
                     </ul>
                 </div>
              </div>
